Bug 274602 - [WGSL] Function parameters have incorrect scope
Summary: [WGSL] Function parameters have incorrect scope
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-05-23 11:12 PDT by Tadeu Zagallo
Modified: 2024-05-24 05:18 PDT (History)
3 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2024-05-23 11:12:30 PDT
...
Comment 1 Radar WebKit Bug Importer 2024-05-23 11:12:42 PDT
<rdar://problem/128625182>
Comment 2 Tadeu Zagallo 2024-05-23 11:15:10 PDT
Pull request: https://github.com/WebKit/WebKit/pull/28997
Comment 3 EWS 2024-05-24 05:18:41 PDT
Committed 279262@main (083dc3ea78f4): <https://commits.webkit.org/279262@main>

Reviewed commits have been landed. Closing PR #28997 and removing active labels.