[WGSL] Function parameters have incorrect scope https://bugs.webkit.org/show_bug.cgi?id=274602 rdar://128625182

Reviewed by Mike Wyrzykowski.

The parameters were being placed in a separate scope from the function local variables,
allowing a local variable to shadow a parameter, which shouldn't be valid according to
the spec.

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):
* Source/WebGPU/WGSL/tests/invalid/shadowing.wgsl: Added.

Canonical link: https://commits.webkit.org/279262@main